--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #42a5f5;
+    background-color: #00b1d2;
+    -webkit-transition: background-color 1s ease;
+    -moz-transition: background-color 1s ease;
+    -o-transition: background-color 1s ease;
+    transition: background-color 1s ease;
 }
 
 .content {
@@ -16,14 +20,48 @@ h1 {
     text-align: center;
 }
 
-
-.form-control {
-    display: none;
-}
-
 .datepicker {
     width: 100%;
     max-width: 600px;
     margin:auto; 
     display: block;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#products > :last-child {
+    margin-right: 0px;
+}
+
+/*input[type=radio] {
+    opacity:0;
+    position: absolute;
+    width: 0;
+}*/
+
+.product {
+    padding: 10px 2px;
+    text-align: center;
+    margin-right: 2%;
+    flex-grow: 1;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#barrons-label { border-color: #00b1d2 }
+#wsj-label { border-color: black }
+#fnlondon-label { border-color: #f37056 }
+
+
+#pages {
+    flex-grow: 4;
+    margin-right:2.5%;
+}
+
+#breakpoints {
+    flex-grow: 1; 
+    margin-right:5%;
 }
