--- a/public/style.css
+++ b/public/style.css
@@ -36,12 +36,6 @@ h1 {
     margin-right: 0px;
 }
 
-/*input[type=radio] {
-    opacity:0;
-    position: absolute;
-    width: 0;
-}*/
-
 .product {
     padding: 10px 2px;
     text-align: center;
@@ -55,6 +49,14 @@ h1 {
 #wsj-label { border-color: black }
 #fnlondon-label { border-color: #f37056 }
 
+.download {
+    padding: 10px 0px;
+    text-align: center;
+    color: white;
+    background-color: #00b1d2;
+    border: 0px;
+    border-radius: 5px;
+}
 
 #pages {
     flex-grow: 4;
