--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,15 @@ h1 {
     background-color: #00b1d2;
     border: 0px;
     border-radius: 5px;
+    -webkit-transition: background-color 1s ease;
+    -moz-transition: background-color 1s ease;
+    -o-transition: background-color 1s ease;
+    transition: background-color 1s ease;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.download:hover {
+    cursor: pointer;
 }
 
 #pages {
