--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,17 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #00b1d2;
-    -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+}
+
+.smooth-fade {
+    -webkit-transition: background-color 1s, border-color 1s;
+    -moz-transition: background-color 1s, border-color 1s;
+    -o-transition: background-color 1s, border-color 1s;
+    transition: background-color 1s, border-color 1s;
+    -webkit-transition-timing-function: ease;
+    -moz-transition-timing-function: ease;
+    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
 }
 
 .content {
@@ -56,10 +63,6 @@ h1 {
     background-color: #00b1d2;
     border: 0px;
     border-radius: 5px;
-    -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    transition: background-color 1s ease;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -68,9 +71,13 @@ h1 {
 }
 
 select {
-    margin: 8px 0px;
     padding: 0px 5px;
-    height: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: 1px solid #00b1d2;
+    border-radius: 5px;
+    background: #fff url(./angle-down-solid.svg) no-repeat;
+    background-position: right 5px center;
 }
 
 #pages {
