--- a/public/style.css
+++ b/public/style.css
@@ -1,78 +1,86 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #00b1d2;
-    -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+  font-family: "Roboto", sans-serif;
+  background-color: #00b1d2;
+  -webkit-transition: background-color 1s ease;
+  -moz-transition: background-color 1s ease;
+  -o-transition: background-color 1s ease;
+  transition: background-color 1s ease;
 }
 
 .content {
-    background-color: #ffffff;
-    border-radius: 5px;
-    max-width: 900px;
-    margin: auto;
-    padding: 15px;
-    display: block;
+  background-color: white;
+  border-radius: 5px;
+  max-width: 900px;
+  margin: auto;
+  padding: 15px;
+  display: block;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .datepicker {
-    width: 100%;
-    max-width: 600px;
-    margin:auto; 
-    display: block;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  display: block;
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #products > :last-child {
-    margin-right: 0px;
+  margin-right: 0px;
 }
 
 .product {
-    padding: 10px 2px;
-    text-align: center;
-    margin-right: 2%;
-    flex-grow: 1;
-    border: 1px solid black;
-    border-radius: 5px;
+  padding: 10px 2px;
+  text-align: center;
+  margin-right: 2%;
+  flex-grow: 1;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
-#barrons-label { border-color: #00b1d2 }
-#wsj-label { border-color: black }
-#fnlondon-label { border-color: #f37056 }
+#barrons-label {
+  border-color: #00b1d2;
+}
+
+#wsj-label {
+  border-color: black;
+}
+
+#fnlondon-label {
+  border-color: #f37056;
+}
 
 .download {
-    padding: 10px 0px;
-    text-align: center;
-    color: white;
-    background-color: #00b1d2;
-    border: 0px;
-    border-radius: 5px;
-    -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    transition: background-color 1s ease;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  padding: 10px 0px;
+  text-align: center;
+  color: white;
+  background-color: #00b1d2;
+  border: 0px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: background-color 1s ease;
+  -moz-transition: background-color 1s ease;
+  -o-transition: background-color 1s ease;
+  transition: background-color 1s ease;
 }
 
 .download:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #pages {
-    flex-grow: 4;
-    margin-right:2.5%;
+  flex-grow: 4;
+  margin-right: 2.5%;
 }
 
 #breakpoints {
-    flex-grow: 1; 
-    margin-right:5%;
+  flex-grow: 1;
+  margin-right: 5%;
 }
