--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -80,7 +80,7 @@ select {
     -moz-appearance: none;
     border: 1px solid #00b1d2;
     border-radius: 5px;
-    background: #fff url(./angle-down-solid.svg) no-repeat;
+    background: #fff url(./assets/angle-down-solid.svg) no-repeat;
     background-position: right 5px center;
 }
 
