--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -4,17 +4,17 @@ $barrons-color: #00b1d2;
 $fnlondon-color: #f37056;
 $wsj-color: black;
 
-@mixin smoothFade() {
-    -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+@mixin smoothFade($property) {
+    -webkit-transition: $property 1s ease;
+    -moz-transition: $property 1s ease;
+    -o-transition: $property 1s ease;
+    transition: $property 1s ease;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     background-color: $barrons-color;
-    @include smoothFade();
+    @include smoothFade(background-color);
 }
 
 .content {
@@ -67,7 +67,7 @@ h1 {
     border: 0px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    @include smoothFade();
+    @include smoothFade(background-color);
 }
 
 .download:hover {
@@ -82,6 +82,7 @@ select {
     border-radius: 5px;
     background: #fff url(./assets/angle-down-solid.svg) no-repeat;
     background-position: right 5px center;
+    @include smoothFade(border-color);
 }
 
 #pages {
